# mapchete-hub

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  LICENSE  README.rst  build.sh  build_upload_docker.sh  docker-build.sh  docker-compose.image.test.yml  docker-compose.image.yml  docker-compose.test.yml  docker-compose.yml  docker-test.sh  manage.py  mongo-init.js  pypi_dont_update.sh  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_mundi.txt  requirements_s1.txt  requirements_test.txt  run_docker_compose.sh  run_integration_tests.sh  setup.py
.github/workflows/: deploy-image.yml  notify-container-images.yml  python-package.yml  sync-dependencies.yml  test-build-image.yml
conda/: meta.yaml
docker/: README.rst  VERSIONS.rst  build.sh  docker-compose.yml  server.env  zone_worker.env
docker/base_app/: Dockerfile
docker/base_image/: Dockerfile
docker/base_image_s1/: Dockerfile
docker/base_worker/: Dockerfile  id_rsa
docker/base_worker_s1/: Dockerfile  OTC_rsa
docker/mapcache/: Dockerfile  configure.sh  install.sh  s2cloudless-2018.xml
docker/mapserver/: Dockerfile
docker/mapserver/html/: index.html
docker/mapserver/map/: layer.map
docker/monitor/: Dockerfile
docker/preview_worker/: Dockerfile  run.sh
docker/server/: Dockerfile  run.sh  run_s1.sh
docker/subprocess_worker/: Dockerfile  run.sh
docker/worker/: Dockerfile
docker/worker_s1/: Dockerfile
docker/zone_worker/: Dockerfile  run.sh  run_s1.sh
docker/zone_worker_s1/: run.sh
mapchete_hub/: __init__.py  _core.py  _log.py  _misc.py  _utils.py  api.py  app.py  application.py  celery_app.py  cli.py  cluster.py  config.py  db.py  enums.py  exceptions.py  flask_app.py  geometry.py  image_filters.py  job_wrapper.py  k8s.py  lifespan_resources.py  log.py  models.py  monitor.py  observers.py  random_names.py  resources.py  settings.py  slack.py  timetools.py  utils.py
mapchete_hub/cli/: __init__.py  main.py  manager.py  server.py  worker.py
mapchete_hub/commands/: __init__.py  _execute.py  _index.py  _misc.py  execute.py  index.py
mapchete_hub/db/: __init__.py  base.py  memory.py  mongodb.py
mapchete_hub/job_handler/: __init__.py  background_thread.py  base.py  k8s_worker.py  mhub_worker.py
mapchete_hub/observers/: __init__.py  db_updater.py  slack_messenger.py
mapchete_hub/processes/: color_correction.py  color_correction_l2a.py  extract_mosaic.py  extract_mosaic_read_all.py  gamma0_stats_TF.py  ndvi_render.py  ndwi_render.py  scale.py
mapchete_hub/processes/s1/: gamma0_stats_TF.py  max_coherence_L2_SLC.py  min_coherence_L2_SLC.py
mapchete_hub/workers/: execute.py  index.py  preview_worker.py  subprocess_worker.py  zone_worker.py
processes/: extract_mosaic.py
scripts/: README.rst  alias_mapcache_seed.sh  generate_spot_config.sh  generate_user_data.sh  idle_workers.sh  launch_spot.sh  live_worker_info.sh  mongo-init.js  mount_volume.sh  reprocess_bounds.sh  reprocess_point.sh  start_backend.sh  start_mapcache_worker.sh  start_mhub.sh  start_preview_worker.sh  start_server.sh  start_worker.sh  update_overviews_bounds.sh  update_overviews_zone.sh  update_worker.sh
scripts/aws_spot/: generate_spot_config.sh  launch_spot.sh  mount_volume.sh
scripts/aws_spot/skeletons/: ec2_user_data_skeleton.sh  spot_config_skeleton.json
scripts/aws_spot_s1/: generate_user_data.sh  launch_spot.sh  mount_volume.sh
scripts/aws_spot_s1/skeletons/: ec2_user_data_skeleton.sh  spot_config_skeleton.json
scripts/container/: rabbitmq.sh  server.sh  worker.sh
scripts/container/backend/: backend.sh
scripts/container/dem_worker/: dem_worker.sh
scripts/container/mapcache_worker/: mapcache.xml  mapcache_worker.sh
scripts/container/preview_worker/: preview_worker.sh
scripts/container/preview_worker/html/: mercator.html
scripts/container/preview_worker/map/geodetic/: biggles.map  debug.map  fcir.map  s2cloudless.map
scripts/container/preview_worker/map/html/: geodetic.html  index.html  mercator.html  olGeoTiff_07.js  s2maps.js
scripts/container/preview_worker/map/mercator/: s2cloudless.map
scripts/container/server/: server.sh
scripts/container/worker/: worker.sh  worker_s1.sh
scripts/html/: index.html
scripts/skeletons/: ec2_user_data_skeleton.sh  spot_config_skeleton.json
tests/: conftest.py  docker_test_api.py  integration_tests.sh  run_docker_tests.py  test_api.py  test_api_integration.py  test_app.py  test_app_integration.py  test_area.fgb  test_cli.py  test_commands.py  test_db.py  test_flask.py  test_gateway.py  test_geometry.py  test_image_filters.py  test_log.py  test_manager.py  test_module.py  test_monitor.py  test_processes.py  test_settings.py  test_slack_messenger.py  test_timetools.py  test_utils.py
tests/testdata/: aws_example_4bands.mapchete  batch_example.mhub  batch_example_invalid_job_pointer_error.mhub  batch_example_no_command_error.mhub  batch_example_no_job_mapchete.mhub  example.mapchete  example_custom_process.mapchete  example_mercator.mapchete  example_process.py  example_s1_process.py  example_subprocess.mapchete  jobs.json  s1_example.mapchete  test.mapchete  tile_13_1986_8557.geojson  workerlost.py
tests/testdata/s2_cache/8.02001953125-46.34033203125-8.0419921875-46.3623046875/S2A_OPER_MSI_L1C_TL_SGS__20180402T155007_A014505_T32TMS_N02.06/: B02.tif  B03.tif  B04.tif  B08.tif
tests/testdata/s2_cache/8.02001953125-46.34033203125-8.0419921875-46.3623046875/S2A_OPER_MSI_L1C_TL_SGS__20180405T141122_A014548_T32TMS_N02.06/: B02.tif  B03.tif  B04.tif  B08.tif
