[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapchete-hub"
dynamic = ["version"]
description = "distributed mapchete processing"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Joachim Ungar", email = "joachim.ungar@eox.at" },
    { name = "Petr Sevcik", email = "petr.sevcik@eox.at" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "dask",
    "dask-gateway",
    "distributed",
    "fastapi",
    "mapchete[contours,geobuf,http,s3,vrt]>=2024.2.1",
    "mongomock",
    "pydantic>=2.0.0",
    "pydantic_settings",
    "pymongo",
    "uvicorn",
    "zarr==2.18.4",
]

[project.optional-dependencies]
complete = [
    "bokeh",
    "blosc",
    "dask",
    "dask-gateway",
    "distributed",
    "fastapi",
    "kubernetes",
    "mapchete[contours,geobuf,http,s3,vrt]>=2024.2.1",
    "mapchete_eo>=2024.10.3",
    "mapchete_xarray>=2022.5.0",
    "mongomock",
    "pydantic>=2.0.0",
    "pydantic_settings",
    "pymongo",
    "slack_sdk",
    "uvicorn",
    "zarr==2.18.4",
]
kubernetes = [
    "kubernetes",
]
slack = [
    "slack_sdk",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mongodb",
    "requests",
]
xarray = [
    "mapchete_xarray>=2022.10.0",
    "zarr==2.18.4",
]
eo = [
    "mapchete_eo>=2024.3.4",
]

[project.scripts]
mhub-manager = "mapchete_hub.cli.manager:main"
mhub-server = "mapchete_hub.cli.server:main"
mhub-worker = "mapchete_hub.cli.worker:main"

[project.urls]
Homepage = "https://gitlab.eox.at/maps/mapchete_hub"

[tool.hatch.version]
path = "mapchete_hub/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mapchete_hub",
]
