[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mapchete-hub"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Distributed mapchete processing."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Joachim Ungar", email = "joachim.ungar@eox.at" },
    { name = "Petr Sevcik", email = "petr.sevcik@eox.at" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",    
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click",
    "dask",
    "dask-gateway",
    "distributed",
    "fastapi",
    "httpx",
    "mapchete[contours,http,s3,vrt]>=2024.2.1",
    "mongomock",
    "pydantic>=2.0.0",
    "pydantic_settings",
    "pymongo",
    "uvicorn",
    "zarr",
]

[project.optional-dependencies]
deployment = [
    "aiohttp",
    "bokeh",
    "click",
    "dask",
    "dask-gateway=2025.4.0",
    "dask-gateway-server==2025.4.0",
    "dask-kubernetes==2025.7.0",
    "distributed",
    "fastapi",
    "fiona",
    "httpx",
    "jupyter-server-proxy",
    "kubernetes",
    "lz4",
    "mapchete[contours,http,s3,vrt]>=2025.11.0",
    "mongomock",
    "numcodecs",
    "numpy",
    "prometheus-client",
    "pydantic>=2.0.0",
    "pymongo",
    "rasterio",
    "shapely",
    "slack_sdk",
    "sqlalchemy",
    "uvicorn",

]
kubernetes = [
    "kubernetes",
]
slack = [
    "slack_sdk",
]
test = [
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-mongodb",
    "requests",
]

[project.scripts]
mhub-manager = "mapchete_hub.cli.manager:main"
mhub-server = "mapchete_hub.cli.server:main"
mhub-worker = "mapchete_hub.cli.worker:main"

[project.urls]
Homepage = "https://github.com/mapchete/mapchete-hub"

[tool.hatch.version]
path = "mapchete_hub/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mapchete_hub",
]

[tool.pytest.ini_options]
env = [
    "MHUB_ENV=testing",
]
mongodb_fixture_dir = "tests"
addopts = "--durations 20 --verbose --nf --cov=mapchete_hub"